[workspace]
members = ["wooting-rgb", "wooting-rgb-sys"]

[workspace.package]
version = "0.2.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/Wooting-RGB"
license = "MIT"
keywords = ["wooting", "keyboard", "rgb", "sdk", "bindings"]
