[workspace]
members = ["wooting-rgb", "wooting-rgb-sys"]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/Wooting-RGB"
license = "MIT"
keywords = ["wooting", "keyboard", "rgb", "sdk", "bindings"]
