[package]
name = "wooting-rgb-sys"
description = "Wooting RGB SDK Rust Bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.70"
cc = { version = "1", features = ["parallel"] }
pkg-config = "0.3"
