[package]
name = "wooting-rgb"
description = "Wooting RGB SDK Rust Library"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "games"]

[dependencies]
lazy_static = "1"
thiserror = "1"
wooting-rgb-sys = { version = "0.3", path = "../wooting-rgb-sys" }
